test/pass/lambdas/lambda_noret_body.lily
# This ensures that the interpreter can handle a lambda wherein the body is an
# expression that does not yield a value.

define noret {}

define f[A](value: A) {
}

f((|| noret()))
