test/fail/classes/invalid_class_name.lily
#[
SyntaxError: 'A' is not a valid class name (too short).
    from invalid_class_name.lily:6:
]#

class A() {}
